# job_summary_generator

./: .dockerignore  .gitignore  Dockerfile  README.md  ai_service.py  api_routes.py  config.py  deploy.sh  docker-compose.yml  env.example  env.production  main.py  models.py  pyproject.toml  render.yaml  requirements.txt  setup.py  test_api_key.py  test_llama2.py
templates/: index.html
